@@ -1,3 +1,8 @@
+Next release
+------------
+
+- Add a ``unique_values`` API to field index.
+
 1.0a6 (2013-05-30)
 ------------------
 
